1.1.0 (2015-01-06)
------------------
  * Change response of GtkTreeView which now reports an additional
  'clicked' message and the values of all selected rows.

1.0.0 (2015-01-04)
------------------
  * Change API: commands now look like "name:action data" rather than
  "name:widget:action data".

0.3.1 (2015-01-03)
------------------
  * Start a NEWS file
  
0.3.0 (2015-01-02)
------------------
  * Added support GtkColorButton, GtkFontButton, and for graying out
  and hiding of arbitrary widgets.