@@ -560,6 +560,25 @@ hides
 .Pq Ic 0
 the widget, or makes it visible
 .Pq Ic 1 .
+.Pp
+.Qo
+.Fa name Ns
+.Ic :force_cb
+.Qc
+initiates the standard callback.  The
+.Fa name Ns
+d widget
+responds as if
+.Ic cb_0
+had been activated, but with a different
+.Fa section
+code:
+.Qo
+.Fa name Ns
+.Ic :forced
+.Fa data
+.Qc .
+The command doesn't change anything on the GUI.
 .Sh GUI FEEDBACK MESSAGES
 A message from the graphical user interface is a line of text.  The
 message format is 
