@@ -1,3 +1,7 @@
+unreleased
+------------------
+  * Add a command for firing GUI callbacks synthetically.
+
 1.1.0 (2015-01-06)
 ------------------
   * Change response of GtkTreeView which now reports an additional
